# voice-backend

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle.kts  ferris.ppn  settings.gradle.kts
src/: main.rs
src/api/: mod.rs
src/api/geocode/: geocoding_client.rs  mod.rs  nominatim_client.rs
src/api/weather/: mod.rs  open_weather_map_client.rs  weather_client.rs
src/config/: configs.rs  default.toml  enums.rs  mod.rs
src/error/: error.rs  mod.rs
src/handlers/: mod.rs  traits.rs
src/handlers/processing/: handler.rs  local_nlp.rs  local_pattern_matcher.rs  mod.rs
src/handlers/recording/: handler.rs  local.rs  mod.rs
src/handlers/transcription/: handler.rs  local_whisper.rs  mod.rs
src/main/kotlin/dev/eagely/voice/: Application.kt
src/main/kotlin/dev/eagely/voice/config/: GeocodingConfig.kt  (+2 more)
src/main/resources/: application.yaml  trigger-mapping.yaml
src/model/: action.rs  command.rs  geocode.rs  mod.rs  timer.rs  weather.rs
src/server/: tcp.rs  ws.rs
src/service/: mod.rs
src/service/geocoding/: geocoding_service.rs  mod.rs  nominatim_client.rs
src/service/llm/: deepseek_client.rs  llm_service.rs  mod.rs  ollama_client.rs
src/service/parsing/: mod.rs  parsing_service.rs  pattern_match_parser.rs  pattern_match_processor.rs  processing_service.rs  rasa_client.rs
src/service/processing/: local_nlp.rs  local_pattern_matcher.rs  mod.rs  pattern_match_processor.rs  processing_service.rs
src/service/recording/: local.rs  local_recorder.rs  mod.rs  recording_service.rs  remote_recorder.rs
src/service/runtime/: local_runtime.rs  local_sync_runtime.rs  mod.rs  runtime_service.rs
src/service/synthesis/: elevenlabs_client.rs  mod.rs  piper_client.rs  synthesizer_service.rs
src/service/timer/: memory_timer.rs  mod.rs  timer_service.rs
src/service/transcription/: deepgram_client.rs  local_whisper.rs  local_whisper_client.rs  local_whisper_transcriber.rs  mod.rs  transcription_service.rs
src/service/tts/: mod.rs  piper_client.rs  tts_service.rs
src/service/volume/: mod.rs  pactl_client.rs  volume_service.rs
src/service/weather/: mod.rs  open_weather_map_client.rs  weather_service.rs
src/service/workspace/: kwin_client.rs  mod.rs  workspace_service.rs
src/tcp/: server.rs
(+10 files in other folders)
