[package]
name = "voice-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.10.1"
config = "0.15.11"
cpal = "0.15.3"
directories = "6.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
hound = "3.5.1"
notify-rust = "4.11.5"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "net",
    "time",
] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"]}
toml = "0.8.20"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
url = "2.5.4"
whisper-rs = "0.14.2"
